[package]
name = "proxima"
version = "0.1.0"
edition = "2021"
authors = ["Proxima Team"]
description = "A decentralized geographic social network where physical location forms the primary organizing principle"

[dependencies]
# Geographic calculations and spatial data structures
geo = "0.28"
geohash = "0.13"
haversine = "0.2"
spade = "2.0"  # Spatial data structures (R-trees, etc.)

# Networking and P2P
tokio = { version = "1.0", features = ["full"] }

# Cryptography and security
sha2 = "0.10"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Async runtime and utilities
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Data structures and algorithms
dashmap = "5.5"
indexmap = "2.0"
lru = "0.12"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
toml = "0.8"

# Testing
proptest = "1.0"
criterion = "0.5"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

# [[bench]]
# name = "geographic_routing"
# harness = false

# [[bench]]
# name = "content_propagation"
# harness = false
