[package]
name = "proxima"
version = "0.1.0"
edition = "2021"
authors = ["Proxima Team"]
description = "A decentralized geographic social network where physical location forms the primary organizing principle"

[dependencies]
# Basic dependencies only
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"